<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/task_bg">


        <TextView
            android:id="@+id/idTitleTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Task_Title"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textSize="25sp"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:id="@+id/idDescriptionTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Task_Description"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif-medium"/>

        <LinearLayout
            android:id="@+id/rlitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/litem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/idDateTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Task_Date"
                    android:layout_marginStart="200dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-medium"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/litem">

                <TextView
                    android:id="@+id/idTimeTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Task_Time"
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-medium"/>

            </RelativeLayout>

        </LinearLayout>



    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp" />



</LinearLayout>