<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context=".QuizGameActivity">

    <RelativeLayout
        android:id="@+id/rellaywallquiz"
        android:layout_width="match_parent"
        android:layout_height="350dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/wall_bg"
            android:visibility="visible">

            <TextView
                android:id="@+id/idquizshow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="25sp"
                android:layout_centerInParent="true" />

        </RelativeLayout>




    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rellaywallquiz">

        <LinearLayout
            android:id="@+id/linlaybtnquiz"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inAnswer"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/et_bg"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/Input_AnswerQuiz"
                android:inputType="text"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <Button
                    android:id="@+id/ibtnCancel"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bt_bg"
                    android:clickable="true"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/white"
                    android:text="@string/Button_CancelQuiz" />

                <Button
                    android:id="@+id/ibtnAnswer"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bt_bg"
                    android:clickable="true"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/white"
                    android:text="@string/Button_ResponseQuiz" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:layout_below="@id/linlaybtnquiz">

            <TextView
                android:id="@+id/outQuiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textAllCaps="true"
                android:textSize="40sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed-light"
                />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>